--- a/index.html
+++ b/index.html
@@ -7,16 +7,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/cce18f0ce0.js"
+    crossorigin="anonymous"></script>  
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/2226/2226342.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Shop</title>
 </head>
 <body>
-    <header>
-        <nav>
-        </nav>
-    </header>
+    
     <main class="body">
         <div id="landing" class="min-vh-100">
+            <nav class="navbar">
+            <div class="icon"> <img src="./imgs/corseticon.png" alt="icon" width="50px"> </div>
+            <!-- creating the toggle button -->
+            <a href="#" class="toggle-button">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a>
+            <!-- other pages -->
+            <div class="navbarlinks">
+                <ul>
+                    <li><a href="./html/admin.html"> <b> <i class="fa fa-info"></i> Admin</a></li></b>
+                    <li><a href="./html/checkout.html"> <b> <i class="fa fa-cart-shopping"></i> Checkout</a></li></b>
+                </ul>
+            </div>
+        </nav>
             <div class="grid-container">
                 <div>
                      <div >
@@ -38,11 +54,11 @@
         </div>
         <div id="catalog" class="bg-dark">
                 <select name="filter" id="filter" style="display:flex;">
-                    <option value="" onclick="filterSelection('all')">All</option>
-                    <option value="" onclick="filterSelection('ethereal')">Ethereal</option>
-                    <option value="" onclick="filterSelection('steampunk')">Steampunk</option>
-                    <option value="" onclick="filterSelection('classic')">Classics</option>
-                    <option value="" onclick="filterSelection('casual')">Casual Wear</option>
+                    <option value="" onclick="filterCard('all')">All</option>
+                    <option value="" onclick="filterCard('ethereal')">Ethereal</option>
+                    <option value="" onclick="filterCard('steampunk')">Steampunk</option>
+                    <option value="" onclick="filterCard('classic')">Classics</option>
+                    <option value="" onclick="filterCard('casual')">Casual Wear</option>
                 </select>
             <div class="items">
                 <div class="card ethereal" style="width: 18rem;">
