--- a/html/admin.html
+++ b/html/admin.html
@@ -34,11 +34,13 @@
         <div class="table">
             <table class="table table-success table-hover">
                 <thead>
-                    <th>#</th>
+                    <tr>
                     <th>Image</th>
+                    <th>Available Stock</th>
                     <th>Price</th>
                     <th>#</th>
                     <th>Style</th>
+                    </tr>
                 </thead>
                 <tbody id="catalogue"></tbody>
             </table>
