--- a/html/admin.html
+++ b/html/admin.html
@@ -35,17 +35,22 @@
             <table class="table table-success table-hover">
                 <thead>
                     <tr>
-                    <th>Image</th>
+                    <th>Name</th>
                     <th>Available Stock</th>
                     <th>Price</th>
-                    <th>#</th>
                     <th>Style</th>
+                    <th>Edit and Delete
+                    </th>
                     </tr>
                 </thead>
                 <tbody id="catalogue"></tbody>
+                <tr>
+                    <td><img src="" alt="">
+                    </td>
+                </tr>
             </table>
         </div>
     </main>
-    <script src="../style.js"></script>
+    <script src="../html/admin.js"></script>
 </body>
 </html>
