--- a/index.html
+++ b/index.html
@@ -61,70 +61,11 @@
                     <option value="" onclick="filterCard('casual')">Casual Wear</option>
                 </select>
 
-                <section id="cards">
+                <section class="row" id="cards"> 
 
-                    <div class="card" style="width: 17rem;">
-                    <img src="${item.image}" style="width:fit-content;">
-                <div class="card-body">
-                    <h3 class="card-title"> ${item.name}</h3>
-                    <p><b>Style: ${item.style}</b></p>
-                    <h5>Price: R ${item.price}</h5>
-                    <button class="btn btn-outline-dark" style="background-color: rgb(222, 101, 178);">Add to checkout</button>
-                </div>
-            </div>
                 </section>
 
-                <!-- old code -->
-            <div class="items">
-                <div class="card ethereal" style="width: 18rem;">
-                    <img src="./imgs/54279e55845716e115af9f45943ec0bc.jpg" alt="">
-                    <p class="price"> Black ethereal lace corset with boning R250</p>
-                </div>
-                <div class="card ethereal" style="width: 18rem;">
-                    <img src="./imgs/416d7a5f78ace1f15cae43d22f4c04fc.jpg" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card sleeves" style="width: 18rem;">
-                    <img src="./imgs/black&bluecorsetwlacesleeves.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card steampunk" style="width: 18rem;">
-                    <img src="./imgs/blksteampunk.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card steampunk" style="width: 18rem;">
-                    <img src="./imgs/brwnsteampunk.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card classic" style="width: 18rem;">
-                    <img src="./imgs/redcorset.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card casual" style="width: 18rem;">
-                    <img src="./imgs/lace-up-floral-corset-top-anotherchill-1_800x.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card sleeves" style="width: 18rem;">
-                    <img src="./imgs/goldcorsetwlacesleeves.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card casual" style="width: 18rem;">
-                    <img src="./imgs/cottagecore.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card casual" style="width: 18rem;">
-                    <img src="./imgs/blkcasual.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card sleeves" style="width: 18rem;">
-                    <img src="./imgs/blackcorsetwlacesleeves.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-                <div class="card classic" style="width: 18rem;">
-                    <img src="./imgs/black&goldcorset.webp" alt="">
-                    <p class="price">R250</p>
-                </div>
-            </div>
+                
         </div>
     </main>
     <footer></footer>
