--- a/html/admin.html
+++ b/html/admin.html
@@ -24,8 +24,8 @@
         </div>
     </nav>
     <main>
-        <div class="table">
-            <table class="table table-success table-hover">
+        <div>
+            <table class="table">
                 <thead>
                     <tr>
                     <th scope="col">Image</th>
@@ -35,7 +35,7 @@
                     <th scope="col">Edit and Delete</th>
                     </tr>
                 </thead>
-                <tbody id="catalogue"></tbody>
+                <tbody id="products"></tbody>
                <!-- admin.js file adds by DOM manipulation -->
             </table>
         </div>
