--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         </div>
         <div id="catalog" class="bg-dark">
                 <select name="filter" id="filter" style="display:flex;">
-                    <option value="" onclick="filterCard('all')">All</option>
-                    <option value="" onclick="filterCard('ethereal')">Ethereal</option>
-                    <option value="" onclick="filterCard('steampunk')">Steampunk</option>
-                    <option value="" onclick="filterCard('classic')">Classics</option>
-                    <option value="" onclick="filterCard('casual')">Casual Wear</option>
+                    <option value="all" onclick="filterCard('all')">All</option>
+                    <option value="ethereal" onclick="filterCard('ethereal')">Ethereal</option>
+                    <option value="steampunk" onclick="filterCard('steampunk')">Steampunk</option>
+                    <option value="classic" onclick="filterCard('classic')">Classics</option>
+                    <option value="casual" onclick="filterCard('casual')">Casual Wear</option>
                 </select>
 
                 <section class="row" id="cards"> 
