--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
         </nav>
             <div class="grid-container">
                 <div>
-                     <div >
-                        <h2 class="d-flex justify-content-end"> 
-                            <strong> We sell the highest quality <br>
-                                corsets</strong></h2>
+                     <div>
+                         <h1 class="homepage-heading  d-flex justify-content-end"> We sell the highest quality corsets</h1>
                      <div class="d-flex justify-content-end ">
                         <button type="button" class="pinkbtn btn btn-rounded">
                          <a style="color: black;" href="#catalog">Browse our catalogue</a>
@@ -54,11 +52,11 @@
         </div>
         <div id="catalog" class="bg-dark">
                 <select name="filter" id="filter" style="display:flex;">
-                    <option value="all" onclick="filterCard('all')">All</option>
-                    <option value="ethereal" onclick="filterCard('ethereal')">Ethereal</option>
-                    <option value="steampunk" onclick="filterCard('steampunk')">Steampunk</option>
-                    <option value="classic" onclick="filterCard('classic')">Classics</option>
-                    <option value="casual" onclick="filterCard('casual')">Casual Wear</option>
+                    <option value="all">All</option>
+                    <option value="ethereal">Ethereal</option>
+                    <option value="steampunk">Steampunk</option>
+                    <option value="classic">Classics</option>
+                    <option value="casual">Casual Wear</option>
                 </select>
 
                 <section class="row" id="cards"> 
@@ -69,6 +67,9 @@
         </div>
     </main>
     <footer></footer>
+    <script src="../script/admin.js"></script>
+    <script src="https://kit.fontawesome.com/cce18f0ce0.js"crossorigin="anonymous"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="script/script.js"></script>
 </body>
 </html>
