--- a/html/checkout.html
+++ b/html/checkout.html
@@ -7,26 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
     crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/cce18f0ce0.js"
+    crossorigin="anonymous"></script>  
     <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/2226/2226342.png" type="image/x-icon">
     <link rel="stylesheet" href="/styles/styles.css">
     <title>Checkout</title>
 </head>
-<body>
-    <nav class="nabznav navbar navbar-expand-lg">
+<body >
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="../imgs/corseticon.png" alt="icon" width="50px"></a>
-          <button class="navbar-toggler" style="color: black;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand " href="#"><img src="../imgs/corseticon.png" alt="icon" width="50px"></a>
+          <button class="navbar-toggler bg-dark" style="color: black;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" style="color: black;"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Checkout</a>
-              <a href="../index.html"> <i class="fa fa-house"></i> Home</a>
-              <a href="/html/admin.html"> <i class="fa fa-info"></i> Admin</a>
+            <div class="navbar-nav navbarlinks">
+              <!-- <a class="nav-link active" aria-current="page" href="#">Checkout</a> -->
+              <a href="../index.html"> <b> <i class="fa fa-house"></i> Home</b></a>
+              <a href="/html/admin.html"> <b> <i class="fa fa-info"></i> Admin</b></a>
             </div>
           </div>
         </div>
       </nav>
+
+      <main class="checkoutpg min-vh-100"></main>
 
       <script src="/script/checkout.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
