--- a/html/checkout.html
+++ b/html/checkout.html
@@ -31,7 +31,11 @@
       </nav>
 
       <main class="checkoutpg min-vh-100"></main>
-
+      <footer class="footer mt-auto py-3 bg-black" style="text-align: center;">   
+        <div>
+           <p>© Copyright 2022 by Nabila. All rights reserved.</p>
+         </div>
+     </footer>
       <script src="/script/checkout.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
